--- a/tests/env/Vagrantfile
+++ b/tests/env/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant::Config.run do |config|
   config.vm.forward_port 80, 8080
 
   # Provisioning via shell, only the basics fo BicBucStriim
-  config.vm.provision :shell, :inline => "sudo apt-get -y install apache2 php5 sqlite3 php5-sqlite tmux"
+  config.vm.provision :shell, :inline => "sudo apt-get -y install apache2 php5 sqlite3 php5-sqlite php5-gd tmux"
   # Enable mod_rewrite
   config.vm.provision :shell, :inline => "sudo a2enmod rewrite"
   # Send a host config with "AllowOverride All" to enable .htaccess/mod_rewrite
