--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"require": {
-    "slim/slim": "2.2.0",
-    "twig/twig": "1.12.3",
-    "slim/extras": "2.0.3"
+    "slim/slim": "2.3.1",
+    "slim/views": "0.1.0",
+    "twig/twig": "1.12.3"
   }
 }
