--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,14 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
 
-		# Tell PHP that the mod_rewrite module is ENABLED.
+	# Tell PHP that the mod_rewrite module is ENABLED.
     SetEnv HTTP_MOD_REWRITE On
 
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
 
 # protect database
