DB access is now split into Calibre and BicBucStriim classes. The BicbucStriim part now uses RedBean PHP as ORM, Calibre remains pure PDO.

--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,8 @@
     Deny from all
 </FilesMatch>
 
+# protect schema
+<FilesMatch schema.sql>
+    Order allow,deny
+    Deny from all
+</FilesMatch>
