Corrected book download, see #63

--- a/messages.yml
+++ b/messages.yml
@@ -498,7 +498,7 @@ opds_root_title:
   en: BicBucStriim Root Catalog
   nl: BicBucStriim Basis Catalogus
 opds_root_subtitle:
-  de: Der Führer zu ihrer Calibre-Bibliothek
+  de: Der Startkatalog ihrer Calibre-Bibliothek
   en: The root catalog to the contents of your Calibre library
   nl: De basis catalogus naar de inhoud van uw Calibre bibliotheek
 opds_by_author1:
