Corrected message bug, fixes #86

--- a/messages.yml
+++ b/messages.yml
@@ -784,7 +784,7 @@ opds_by_search3:
 opds_by_series1:
   de: Nach Buchreihe
   en: By Series
-  en: Par Séries
+  fr: Par Séries
   nl: Op Series
   it: Per Serie
 opds_by_series2:
